--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -9,14 +9,15 @@ display:flex;
 justify-content: center;
 
 flex-direction: column;
-
+border-top: 5px solid #CFB53B;
+border-bottom: 5px solid #CFB53B;
 }
 .us {
   margin-top: 10%;
   align-items: center;
-  background-color: rgba(240, 240, 240, 0.5);
+  background-color: rgba(255, 255, 255, 0.7);
   min-height: 300px;
-  border: 3px solid #CFB53B;
+
   margin-left: .1em;
   margin-right: .1em;
   // box-shadow: 10px 10px 10px rbga(0,0,0,7.5);
