--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -2,7 +2,7 @@
 .background-menu {
   background: url(../images/map-background-mobile.jpg);
   background-size: cover;
-  min-height: 600px;
+  min-height: 500px;
   margin: 0 auto;
 
 }
@@ -16,7 +16,7 @@
   background-repeat: no-repeat;
 }
 .chalkboard h2 {
-  // padding-top: 25%;
+  padding-top: 40%;
   font-size: 5em;
   font-family: 'Alex Brush', cursive;
   color:#eff0f2;
@@ -58,6 +58,48 @@
 
   background: #e0e1e2;
 }
+.special-menu {
+  background: url(../images/underlines.png);
+  background-position: 50%;
+  width: 100%;
+  height: 50px;
+  color:white;
+  font-size: 2em;
+  margin-top: 6em;
+}
+.special-menu:focus,
+.set-menu:focus,
+.main-menu:focus {
+   outline:0 !important;
+
+   font-weight: lighter;
+}
+button {
+  font-family: 'Ropa Sans', sans-serif;
+  font-weight: lighter;
+}
+.main-menu {
+  background: url(../images/underlines.png);
+  background-position: 50%;
+  width: 100%;
+  height: 50px;
+  color:white;
+  font-size: 2em;
+
+}
+main-menu:hover{
+  color:blue;
+  cursor: pointer;
+}
+.set-menu {
+  background: url(../images/underlines.png);
+  background-position: 50%;
+  width: 100%;
+  height: 50px;
+  color:white;
+  font-size: 2em;
+
+}
 @media screen and (min-width:48em){
   .special-menu {
     background: url(../images/underlines.png);
@@ -67,6 +109,7 @@
     color:white;
     font-size: 2em;
     margin-left: 2em;
+    margin-bottom: 1em;
   }
   .special-menu:focus,
   .set-menu:focus,
@@ -101,12 +144,14 @@
   background: url(../images/map-background.jpg);
   background-repeat:no-repeat;
   background-size: cover;
-  min-height: 500px;
+  min-height: 400px;
+
   display: flex;
   // background-attachment: fixed;
 }
 .board {
-  padding-bottom: 6em;
+  padding-top: 2em;
+  padding-bottom: 2em;
 }
 .chalkboard {
 margin: 0 auto;
